# xeno-mathematics-engine

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE_UNIFIEE_V01_SUMMARY.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEMO.md  DEMO_S2PP.md  Dockerfile  Dockerfile.verifier  FCA_IMPLEMENTATION_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  ISSUES_POST_V01.md  LICENSE  LOGS.md  MIGRATION_COMPLETE_SUMMARY.md  Makefile  Makefile.domain  Makefile.events  Makefile.fca  Makefile.orchestrator  Makefile.orchestrator_v1  NOTE.md  OPERATIONAL_HANDOFF_COMPLETE.md  PR_F_SUMMARY.md  README-orchestrator.md  README-usage.md  README.md  README_BENCH.md  README_DEMO.md  README_FCA.md  README_ORCHESTRATOR.md  RELEASE_SUMMARY_V01.md  SECURITY.md  TOP_LAB_READINESS_SUMMARY.md  (+32 more)
.github/: dependabot.yml  top-lab-readiness.md
artifacts/: spec_pack_v0.1.1.sha256  spec_pack_v0.2-pre.sha256
baselines/: pack.merkle.json
bench/: run.py  run_sweep.py
cli/: bfk.py
config/: capabilities.yml  pack.yaml  referee.yaml
configs/: llm.yaml  policy.yaml  policy_flags.yaml  unified_architecture.yaml  weights.json  weights_v2.json
controller/: __init__.py  controller.py  deterministic.py  obligations.py  patch.py
core/: __init__.py  canonicalization.py  delta.py  hashing.py  llm_client.py  pcap.py  schemas.py  state.py  utils.py
demo/: __init__.py
demo_repo/: README.md
docs/: 2pager.md  ARCHITECTURE.md  ARCHITECTURE_UNIFIEE_V01.md  CI.md  DRIFT_POLICY.md  OperatingContract.md  POLICY_JUSTIFICATIONS.md  PublicBenchPack.md  QUICKSTART.md  README.md  Reproducibility.md  Runbook.md  SECURITY.md  VERIFIER.md  ae.md  benchmarks.md  egraph.md  index.md  metrics.md  orchestrator.md  pcap.md  pcn.md  proofs.md  psp.md  referee.md  run-docker.md  supply-chain.md
generator/: __init__.py  mutators.py  prompts.py  stochastic.py
methods/: README.md  __init__.py
metrics/: __init__.py  collect.py  report.py
notebook/: delta_calibration.ipynb
obligations/: __init__.py  policies.py
orchestrator/: README.md  adapter_llm.py  cli_lab.py  config.py  orchestrator.py  orchestrator_lite.py  orchestrator_v1.py  skeleton.py  skeleton_llm.py  state.py
pefc/: __init__.py  cli.py  container.py  errors.py  logging.py  runner.py  sbom.py  summary.py
planner/: __init__.py  meta.py  prompts.py  scoring.py
plans/: plan-hello.json
policy/: bandit.py  changelog.rego  dep_pinned.rego  digest.rego  diversity.py  license.rego  no_egress.rego  no_secrets.rego  pii.rego  provenance.rego  repro.rego  sbom.rego  semver.rego
prompts/: ae_counterexamples.tpl  ae_implications.tpl  cegis_choreography.tpl  contracts.py  generalize.tpl  meet.tpl  refute.tpl
proofengine/: __init__.py  metrics.py
proofengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rules/: README.md  k-deterministic-tests.json  k-no-secrets.json  k-semver-compliance.json
runner/: __init__.py  cli.py  deterministic.py  hermetic_stub.py  verifier.py
schema/: manifest.schema.json  pcap.schema.json  summary.schema.json
schemas/: CompositeOp.json  DCA.json  (+5 more)
(+671 files in other folders)
