[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xme"
version = "0.0.1"
description = "Xeno-Math Engine — Proofengine Discovery CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Romain Peter" }]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "orjson>=3.9",
  "networkx>=3.2",
  "rich>=13.7",
]

[project.scripts]
xme = "xme.cli.main:app"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/xme"]

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]
